# sb-healthcheck

./: Cargo.toml  README.md  config.json  output.txt  rotate-logs.sh  rustfmt.toml  sb-healthcheck.service  update.sh
.cargo/: config.toml
.github/workflows/: release.yml
src/: cache.rs  checker.rs  main.rs  server.rs
src/models/: check.rs  config.rs  health.rs  mod.rs
src/tests/: config_tests.rs  mod.rs
