[package]
name = "sb-healthcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
dashmap = "5.5"
